--- a/bin/main/.gitignore
+++ b/bin/main/.gitignore
@@ -1,1 +1,10 @@
 /GUI/
+/converter/
+/custom_exceptions/
+/drawMusic/
+/image_assets/
+/models/
+/music_player/
+/note_information/
+/org.openjfx/
+/utility/
